force-app/main/default/objects/Opportunity_Debrief__c/Opportunity_Debrief__c.object-meta.xml
<CustomObject>
    <label>Issues Tracker</label>
    <nameField>
        <displayFormat>Issue-{000000}</displayFormat>
        <label>Opportunity Debrief Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>