force-app/main/default/objects/Opportunity_Debrief__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Feature</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Rubrik</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>