force-app/main/default/objects/Opportunity_Debrief__c/fields/Area_Detail__c.field-meta.xml
<CustomField>
    <fullName>Area_Detail__c</fullName>
    <label>Area - Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Age of Company</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Lack of Executive Support</fullName>
            </value>
            <value>
                <fullName>Lack of Vision or Roadmap</fullName>
            </value>
            <value>
                <fullName>Lack or Loss of Budget</fullName>
            </value>
            <value>
                <fullName>No Champion</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>Polaris</fullName>
            </value>
            <value>
                <fullName>Reputation/Analysts</fullName>
            </value>
            <value>
                <fullName>Sold Too Low in Organization</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
                <isActive>false</isActive>
                <label>Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>