force-app/main/default/objects/Opportunity_Debrief__c/fields/Area_Sub_Detail__c.field-meta.xml
<CustomField>
    <fullName>Area_Sub_Detail__c</fullName>
    <label>Area - Sub-Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area_Detail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Hardware</fullName>
            </value>
            <value>
                <fullName>AHV</fullName>
            </value>
            <value>
                <fullName>AppFlows</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Containers / Openstack</fullName>
            </value>
            <value>
                <fullName>Data Classification</fullName>
            </value>
            <value>
                <fullName>DB2</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>Hadoop / HDFS</fullName>
            </value>
            <value>
                <fullName>Hyper-V</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Multi-tenancy</fullName>
            </value>
            <value>
                <fullName>Multi-tenancy / RBAC</fullName>
            </value>
            <value>
                <fullName>NoSQL - Cassandra</fullName>
            </value>
            <value>
                <fullName>NoSQL - Mongo</fullName>
            </value>
            <value>
                <fullName>OneDrive</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Performance / Scaling</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>SAP HANA</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Sizing</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>