force-app/main/default/objects/Opportunity_Debrief__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Issues Tracker</relationshipLabel>
    <relationshipName>Issues_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>