force-app/main/default/objects/Opportunity_Debrief__c/fields/Date_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_In_Review__c</fullName>
    <label>Date - In Review</label>
    <type>DateTime</type>
</CustomField>