force-app/main/default/objects/Opportunity_Debrief__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <label>Date - Submitted</label>
    <type>DateTime</type>
</CustomField>