force-app/main/default/objects/Opportunity_Debrief__c/fields/Days_to_Accept__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Accept__c</fullName>
    <formula>if( TEXT( PM_Review_Status__c )= &quot;Submitted&quot;, TODAY() - DATEVALUE(CreatedDate),  If(ISBLANK(Date_In_Review__c), DATEVALUE( Date_Completed__c )  - DATEVALUE(CreatedDate), DATEVALUE(Date_In_Review__c)  - DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Accept</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>