force-app/main/default/objects/Opportunity_Debrief__c/fields/Days_to_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Resolution__c</fullName>
    <formula>if( TEXT( PM_Review_Status__c )= &quot;Review Completed&quot;,DATEVALUE( Date_Completed__c ) - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Resolution</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>