force-app/main/default/objects/Opportunity_Debrief__c/fields/Opportunity_Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Current_Quarter__c</fullName>
    <formula>IF(AND(
 CEILING((MONTH( Opportunity__r.CloseDate) -1)/3)=CEILING( MONTH(TODAY())/3),
 YEAR(Opportunity__r.CloseDate)= YEAR(TODAY())
),&quot;Current Quarter&quot;, &quot;Not Current Quarter&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity - Current Quarter</label>
    <type>Text</type>
</CustomField>