force-app/main/default/objects/Opportunity_Debrief__c/fields/Opportunity_Escalation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Escalation_Stage__c</fullName>
    <label>Opportunity Escalation Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>