force-app/main/default/objects/Opportunity_Debrief__c/fields/Opportunity_In_Path__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_In_Path__c</fullName>
    <formula>If( Opportunity__r.In_Forecast_Theatre__c = TRUE, &quot;In Path&quot;, &quot;Not In Path&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity - In Path</label>
    <type>Text</type>
</CustomField>