force-app/main/default/objects/Opportunity_Debrief__c/fields/PM_Notes__c.field-meta.xml
<CustomField>
    <fullName>PM_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>