force-app/main/default/objects/Opportunity_Debrief__c/fields/PM_Notified__c.field-meta.xml
<CustomField>
    <fullName>PM_Notified__c</fullName>
    <label>PM Notified</label>
    <type>Date</type>
</CustomField>