force-app/main/default/objects/Opportunity_Debrief__c/fields/PM_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>PM_Review_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Review Completed - Resolution Identified</fullName>
            </value>
            <value>
                <fullName>Review Completed - No Current Resolution</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
                <isActive>false</isActive>
                <label>Review Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>