force-app/main/default/objects/Opportunity_Debrief__c/fields/RFE_Opened__c.field-meta.xml
<CustomField>
    <fullName>RFE_Opened__c</fullName>
    <label>RFE Opened</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>