force-app/main/default/objects/Opportunity_Debrief__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocker</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
                <isActive>false</isActive>
                <label>Critical</label>
            </value>
            <value>
                <fullName>Minor</fullName>
                <isActive>false</isActive>
                <label>Minor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>