force-app/main/default/objects/Opportunity_Debrief__c/fields/SLA_First_Touch__c.field-meta.xml
<CustomField>
    <fullName>SLA_First_Touch__c</fullName>
    <formula>If( AND(TEXT(PM_Review_Status__c) = &apos;Submitted&apos;,  TEXT(Severity__c) = &apos;Blocker&apos;, Days_to_Accept__c &gt;= 1 ), &apos;Not Touched - In Violation of SLA&apos;,If( AND(TEXT(PM_Review_Status__c) = &apos;Submitted&apos;,  TEXT(Severity__c) = &apos;Major&apos;, Days_to_Accept__c &gt;= 2 ), &apos;Not Touched - In Violation of SLA&apos;,If( AND(TEXT(PM_Review_Status__c) != &apos;Submitted&apos;,  TEXT(Severity__c) = &apos;Blocker&apos;, Days_to_Accept__c &gt;= 1 ), &apos;Not Touched - In Violation of SLA&apos;,If( AND(TEXT(PM_Review_Status__c) != &apos;Submitted&apos;,  TEXT(Severity__c) = &apos;Major&apos;, Days_to_Accept__c &gt;= 2 ), &apos;Not Touched - In Violation of SLA&apos;,If( TEXT(Severity__c) = &apos;Minor&apos;, &apos;No SLA&apos;,&apos;In Compliance&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA First Touch</label>
    <type>Text</type>
</CustomField>