force-app/main/default/objects/Opportunity_Debrief__c/validationRules/Support_Case_Required_For_Product_Issues.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_Case_Required_For_Product_Issues</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Area__c) = &quot;Product Issue&quot;,   ISBLANK(Case__c), ISBLANK( TEXT(Impact__c )))</errorConditionFormula>
    <errorDisplayField>Case__c</errorDisplayField>
    <errorMessage>A support case is required to open a Product Issue</errorMessage>
</ValidationRule>